...
                                <color key="textColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome Completo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="adM-AB-9Bk">
                                <rect key="frame" x="90" y="258" width="235" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="campo_nome"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Altura:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acj-Bg-9Tg">
                                <rect key="frame" x="90" y="361" width="51" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <color key="textColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                                <color key="highlightedColor" systemColor="systemGray2Color"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="m" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ccG-St-FZb">
                                <rect key="frame" x="149" y="354" width="176" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="campo_altura"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Kg" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NBO-bz-rwZ">
                                <rect key="frame" x="149" y="402" width="176" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="campo_peso"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="anos" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DHA-nR-4QU">
                                <rect key="frame" x="149" y="450" width="176" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="campo_idade"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJs-hj-1Lx">
                                <rect key="frame" x="134" y="531" width="146" height="38"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="botao_calcular"/>
                                <state key="normal" title="Calcular">
                                    <color key="titleColor" systemColor="viewFlipsideBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="calculaImc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="D0h-n9-Lj2"/>
                                </connections>
...
